completed content and css

--- a/about.html
+++ b/about.html
@@ -5,22 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Nyarko Portfolio</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap" rel="stylesheet">
 </head>
+
 
 <body>
     <div class="container">
         <header class="site-header" role="banner">
-            <nav class="main-nav" role="navigation">
-                <a href="index.html">Home </a>
-                <a href="about.html">About</a>
-                <a href="#">Contact</a>
-            </nav>
+            <a href="index.html"><img src="/images/pfppic.PNG" alt=""></a>
+            <div class="user">
+                <h1>
+                    Samuel Nyarko
+                </h1>
+                <p>
+                    Photogropher/Videogropher
+                </p>
+            </div>
+                <nav class="main-nav desktop mobile" role="navigation">
+                    <ul>
+                       <li> <a href="index.html">Home </a></li>
+                       <li> <a href="about.html">About</a></li>
+                       <li> <a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
         </header>
-    </div>
-    
-    <main class="main-content">
 
-    </main>
+        <main>
+            <div class="container">
+                <section class="child location">
+                    <h2>Location</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d855399.2620571466!2d-76.52645485453463!3d45.23213687323911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x8a6a51e131dd15ed!2sOttawa%2C%20ON!5e0!3m2!1sen!2sca!4v1647411617665!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </section>
+
+                <section class="child education">
+                    <div class="card">
+                        <h2>Education</h2>
+                        <div class="high-school">
+                            <div class="container">
+                              <h3>High School Diploma</h3>
+                              <p>Holy Trinity High School </p>
+                            </div>
+                        </div>
+
+                            <div class="college">
+                                <div class="container">
+                                  <h3>Currently Completing</h3>
+                                  <p>Algonquin College </p>
+                                </div>
+                            </div>
+                    </div>
+                </section>
+            </div>
+        </main>
 </body>
 </html>
