--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
             <div class="container">
                 <section class="child location">
                     <h2>Location</h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d855399.2620571466!2d-76.52645485453463!3d45.23213687323911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x8a6a51e131dd15ed!2sOttawa%2C%20ON!5e0!3m2!1sen!2sca!4v1647411617665!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d855399.2620571466!2d-76.52645485453463!3d45.23213687323911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x8a6a51e131dd15ed!2sOttawa%2C%20ON!5e0!3m2!1sen!2sca!4v1647411617665!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="desktop-map"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1438604.3454716655!2d-76.5264549!3d45.2321369!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x8a6a51e131dd15ed!2sOttawa%2C%20ON!5e0!3m2!1sen!2sca!4v1647411687936!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="mobile-map"></iframe>
                 </section>
 
                 <section class="child education">
