fixed comments and added mock photos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
     <header class="site-header" role="banner">
         <a href="index.html"><img src="/images/pfppic.PNG" alt=""></a>
@@ -22,6 +21,7 @@
             </p>
         </div>
         <nav class="main-nav desktop mobile" role="navigation">
+            <!--Navigation Side Bar-->
             <ul>
                 <li> <a href="index.html">Home </a></li>
                 <li> <a href="about.html">About</a></li>
@@ -32,12 +32,14 @@
     
     <div class="container">
     <main class="main-content">
+        <!--Main content of the site-->
         <div class="maincontent">
+            <!--Introduction to site-->
             <section class="child welcome">
                 <div class="card">
                     <h2>Welcome To My Portfolio</h2>
                     <div class="container">
-                      <p>Hi, my name is Samuel Nyarko. I am a Photogropher and Videogropher based out of ottawa ontario.</p>
+                      <p>Hi, my name is Samuel Nyarko. I am a Photogropher and Videogropher based out of Ottawa, Ontario Canada.</p>
                       <button>
                           Learn More About Me
                       </button>
@@ -45,11 +47,13 @@
                   </div>
             </section>
 
+            <!--CLient list-->
             <section class="child clients">
                 <h2>Clients I have Worked With</h2>
                 <div class="logos">
                     <div class="box1">
-                    <picture>       
+                    <picture>   
+                        <!--JZmedia log pictures-->    
                             <source srcset="images/jzmedia270px.png,
                             images/jzmedia640.png 2x,
                             images/jzmedia960.png 3x"
@@ -67,6 +71,7 @@
 
                     <div class="box1">
                     <picture>
+                        <!--GE Brand logo pictures-->
                             <source srcset="images/gebrand270.png,
                             images/gebrand640.png 2x,
                             images/gebrand720.png 3x"
@@ -84,6 +89,7 @@
                     
                     <div class="box1">
                     <picture>
+                        <!--LZ Brand Logo pictures-->
                             <source srcset="images/gebrand270.png,
                             images/gebrand640.png 2x,
                             images/gebrand720.png 3x"
@@ -98,12 +104,16 @@
                     </picture>
                     </div>
 
+                    <!--Newspaper Logo-->
                     <div class="box"><img src="images/newspaper270.png" alt="newspaper logo"></div>
+                    <!--turfgrass logo-->
                     <div class="box"><img src="images/turfgrass270.png" alt="turfgrass logo"></div>
+                    <!--newsbeats Logo-->
                     <div class="box"><img src="images/newzbeats270.png" alt="newzbeats logo"></div>
                 </div>
             </section>
 
+            <!--Photo and video gallery-->
             <section class="child gallery">
                 <div class="grid">
                     <img src="images/gino.png" alt="photo 1">
