--- a/contact.html
+++ b/contact.html
@@ -9,32 +9,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
+    <header class="site-header" role="banner">
+        <a href="index.html"><img src="/images/pfppic.PNG" alt=""></a>
+        <div class="user">
+            <h1>
+                Samuel Nyarko
+            </h1>
+            <p>
+                Photogropher/Videogropher
+            </p>
+        </div>
+        <!--Navigation Menu-->
+        <nav class="main-nav desktop mobile" role="navigation">
+            <ul>
+                <li> <a href="index.html">Home </a></li>
+                <li> <a href="about.html">About</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
     <div class="container">
-        <header class="site-header" role="banner">
-            <a href="index.html"><img src="/images/pfppic.PNG" alt=""></a>
-            <div class="user">
-                <h1>
-                    Samuel Nyarko
-                </h1>
-                <p>
-                    Photogropher/Videogropher
-                </p>
-            </div>
-                <nav class="main-nav desktop mobile" role="navigation">
-                    <ul>
-                       <li> <a href="index.html">Home </a></li>
-                       <li> <a href="about.html">About</a></li>
-                       <li> <a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-        </header>
-
         <main>
             <div class="contact-container">
                 <h2>Cantact For Inquiries</h2>
-                <form action="">
+                <!--Contact form-->
+                <form>
                     <div class="wrap">
                         <div class="box">
                             <input type="text" name="fname" id="fname" required>
@@ -46,20 +47,21 @@
                         </div>
                         <div class="box">
                             <input type="email" name="mail" id="mail" required>
-                            <label for="email">Email</label>
+                            <label for="mail">Email</label>
                         </div>
                     </div>
 
                     <div class="wrap">
                         <div class="box">
-                            <textarea name="" id="mes" required></textarea>
+                            <textarea name="message" id="mes" required></textarea>
                             <label for="mes">Message</label>
                         </div>
-
-                        <input type="submit" name="" value="Send">
+                        </div>
+                        <input type="submit" value="Send">
                 </form>
 
             </div>
         </main>
+        </div>
     </body>
 </html>
